--- a/Facebook_Automation.ipynb
+++ b/Facebook_Automation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,15 +38,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the email address or phone number: chintala.tejas@gmail.com\n",
-      "Enter the password: maxrexfelix\n"
+      "Enter the email address or phone number: xxxx\n",
+      "Enter the password: xxxx\n"
      ]
     }
    ],
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,67 +101,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sending a message to Messenger\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Enter the name: Tarush Chintala\n"
-     ]
-    }
-   ],
-   "source": [
-    "#Clicking on the Messenger icon\n",
-    "sleep(3)\n",
-    "msg_icon = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[2]/div[4]/div[1]/div[2]/span/div/div[1]\")\n",
-    "msg_icon.click()\n",
-    "\n",
-    "#Searching for the person\n",
-    "sleep(3)\n",
-    "search = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[2]/div[4]/div[2]/div/div/div[1]/div[1]/div/div/div/div/div/div/div[1]/div/div[1]/div[1]/div[2]/div[1]/div/div/div/label/input\")\n",
-    "search.click()\n",
-    "\n",
-    "#Enter the person name\n",
-    "name = input(\"Enter the name: \")\n",
-    "search_bar = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[2]/div[4]/div[2]/div/div/div[1]/div[1]/div/div/div/div/div/div/div[1]/div/div[1]/div[1]/div[2]/div[1]/div/div/div[2]/label/input\")\n",
-    "search_bar.send_keys(name)\n",
-    "\n",
-    "#Opening the chatbox\n",
-    "sleep(3)\n",
-    "tab = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[2]/div[4]/div[2]/div/div/div[1]/div[2]/div/div/div[1]/div[1]/div/div/div[1]/ul/div[1]/li/div/div[1]/div/div[2]/span\")\n",
-    "tab.click()\n",
-    "sleep(2)\n",
-    "\n",
-    "#Sending the message\n",
-    "message = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[5]/div[1]/div[1]/div[1]/div/div/div/div/div/div/div[2]/div/div[2]/form/div/div[3]/div[2]/div[1]/div/div/div/div/div[2]/div/div/div/div\")\n",
-    "message.send_keys(\"This message was sent using Selenium\")\n",
-    "sleep(3)\n",
-    "send = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[5]/div[1]/div[1]/div[1]/div/div/div/div/div/div/div[2]/div/div[2]/form/div/div[3]/span[2]/div\")\n",
-    "send.click()\n",
-    "\n",
-    "#Closing the chatbox\n",
-    "sleep(2)\n",
-    "close = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[5]/div[1]/div[1]/div[1]/div/div/div/div/div/div/div[1]/div/div/div[3]/span[4]/div\")\n",
-    "close.click()\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Posting Story"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,14 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the bio: I am inevitable!!\n"
+      "Enter the bio: xxxx\n"
      ]
     }
    ],
@@ -271,12 +216,62 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Sending a message to Messenger"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the name: Tejas Chintala\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Clicking on the Messenger icon\n",
+    "sleep(3)\n",
+    "msg_icon = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[2]/div[4]/div[1]/div[2]/span/div/div[1]\")\n",
+    "msg_icon.click()\n",
+    "\n",
+    "#Searching for the person\n",
+    "sleep(3)\n",
+    "search = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[2]/div[4]/div[2]/div/div/div[1]/div[1]/div/div/div/div/div/div/div[1]/div/div[1]/div[1]/div[2]/div[1]/div/div/div/label/input\")\n",
+    "search.click()\n",
+    "\n",
+    "#Enter the person name\n",
+    "name = input(\"Enter the name: \")\n",
+    "search_bar = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[2]/div[4]/div[2]/div/div/div[1]/div[1]/div/div/div/div/div/div/div[1]/div/div[1]/div[1]/div[2]/div[1]/div/div/div[2]/label/input\")\n",
+    "search_bar.send_keys(name)\n",
+    "\n",
+    "#Opening the chatbox\n",
+    "sleep(3)\n",
+    "tab = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[2]/div[4]/div[2]/div/div/div[1]/div[2]/div/div/div[1]/div[1]/div/div/div[1]/ul/div[1]/li/div/div[1]/div/div[2]/span\")\n",
+    "tab.click()\n",
+    "sleep(2)\n",
+    "\n",
+    "#Sending the message\n",
+    "message = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[5]/div[1]/div[1]/div[1]/div/div/div/div/div/div/div[2]/div/div[2]/form/div/div[3]/div[2]/div[1]/div/div/div/div/div[2]/div/div/div/div\")\n",
+    "message.send_keys(\"This message was sent using Selenium\")\n",
+    "sleep(3)\n",
+    "send = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[5]/div[1]/div[1]/div[1]/div/div/div/div/div/div/div[2]/div/div[2]/form/div/div[3]/span[2]/div\")\n",
+    "send.click()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Logout of the account"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
