--- a/Facebook_Automation.ipynb
+++ b/Facebook_Automation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,14 +38,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the email address or phone number: xxxx\n",
+      "Enter the email address or phone number: email@gmail.com\n",
       "Enter the password: xxxx\n"
      ]
     }
@@ -77,23 +77,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Clicking on the drop-down button\n",
     "sleep(3)\n",
-    "theme = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[2]/div[4]/div[1]/span/div/div[1]\")\n",
+    "theme = browser.find_element_by_xpath(\"//div[@aria-label='Account']\")\n",
     "theme.click()\n",
     "\n",
     "#Selecting the dark mode\n",
     "sleep(3)\n",
-    "dark = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[2]/div[4]/div[2]/div/div/div[1]/div[1]/div/div/div/div/div/div/div/div[1]/div/div[3]/div/div[3]/div/div[1]/div[2]/div[2]/div/div/div/input\")\n",
+    "dark = browser.find_element_by_xpath(\"//input[@aria-label='Enabled']\")\n",
     "dark.click()\n",
     "\n",
     "#Unclicking the drop-down button\n",
     "sleep(2)\n",
-    "unclick = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[2]/div[4]/div[1]/span/div/div[1]\")\n",
+    "unclick = browser.find_element_by_xpath(\"//div[@aria-label='Account']\")\n",
     "unclick.click()"
    ]
   },
@@ -106,31 +106,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "sleep(3)\n",
-    "browser.maximize_window()\n",
+    "browser.maximize_window() #Maximize the browser window\n",
+    "\n",
+    "#Create the story\n",
     "sleep(3)\n",
-    "story_login = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[3]/div/div/div[1]/div[1]/div/div[2]/div/div/div[2]/div/div/div[1]/div/div[1]/div/a/div/div/div/div[2]\")\n",
-    "story_login.click()\n",
+    "story_login = browser.find_element_by_link_text('Create a story').click()\n",
     "sleep(3)\n",
     "\n",
     "#Selecting the Text Story\n",
-    "text_story = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[4]/div/div/div[1]/div/div[3]/div[2]/div[2]/div/div/div/div/div[2]\")\n",
+    "text_story = browser.find_element_by_xpath(\"//div[@class='i1fnvgqd j83agx80']//div[@class='oajrlxb2 gs1a9yip g5ia77u1 mtkw9kbi tlpljxtp qensuy8j ppp5ayq2 goun2846 ccm00jje s44p3ltw mk2mc5f4 rt8b4zig n8ej3o3l agehan2d sk4xxmp2 rq0escxv nhd2j8a9 pq6dq46d mg4g778l btwxx1t3 pfnyh3mw p7hjln8o kvgmc6g5 cxmmr5t8 oygrvhab hcukyx3x tgvbjcpo hpfvmrgz jb3vyjys rz4wbd8a qt6c0cv9 a8nywdso l9j0dhe7 i1ao9s8h esuyzwwr f1sip0of du4w35lb lzcic4wl abiwlrkh p8dawk7l']\")\n",
     "text_story.click()\n",
+    "\n",
     "#Adding the text\n",
     "sleep(3)\n",
-    "decription = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[4]/div/div/div[1]/div/div[3]/div[2]/div[1]/div/div[3]/div[1]/div[2]/div/div[3]/div/div[1]/div/label/div/div/textarea\")\n",
-    "decription.click()\n",
     "text = browser.find_element_by_tag_name(\"textarea\")\n",
     "sleep(1)\n",
     "text.send_keys(\"This story was created using Selenium\")\n",
+    "\n",
     "#Confirming the story\n",
     "sleep(2)\n",
     "send = browser.find_element_by_class_name(\"s1i5eluu\")\n",
-    "send.click()\n"
+    "send.click()"
    ]
   },
   {
@@ -142,13 +143,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Selecting the create post \n",
     "sleep(3)\n",
-    "create = browser.find_element_by_css_selector(\"#mount_0_0 > div > div > div.rq0escxv.l9j0dhe7.du4w35lb > div.rq0escxv.l9j0dhe7.du4w35lb > div > div > div.j83agx80.cbu4d94t.d6urw2fd.dp1hu0rb.l9j0dhe7.du4w35lb > div.rq0escxv.l9j0dhe7.du4w35lb.j83agx80.taijpn5t.gs1a9yip.owycx6da.btwxx1t3.dp1hu0rb.j6ylrsjq > div > div.rq0escxv.l9j0dhe7.du4w35lb.j83agx80.pmt1y7k9.buofh1pr.g5gj957u.hpfvmrgz.taijpn5t.gs1a9yip.owycx6da.btwxx1t3.f7vcsfb0.fjf4s8hc > div > div > div:nth-child(3) > div > div:nth-child(3) > div > div > div > div.k4urcfbm.g5gj957u.buofh1pr.j83agx80.ll8tlv6m > div\")\n",
+    "create = browser.find_element_by_xpath(\"//div[@class='oajrlxb2 b3i9ofy5 qu0x051f esr5mh6w e9989ue4 r7d6kgcz rq0escxv nhd2j8a9 j83agx80 p7hjln8o kvgmc6g5 cxmmr5t8 oygrvhab hcukyx3x cxgpxx05 d1544ag0 sj5x9vvc tw6a2znq i1ao9s8h esuyzwwr f1sip0of lzcic4wl l9j0dhe7 abiwlrkh p8dawk7l bp9cbjyn orhb3f3m czkt41v7 fmqxjp7s emzo65vh btwxx1t3 buofh1pr idiwt2bm jifvfom9 ni8dbmo4 stjgntxs kbf60n1y']\")\n",
     "create.click()\n",
     "sleep(2)\n",
     "\n",
@@ -158,8 +159,7 @@
     "\n",
     "#Sending the post\n",
     "sleep(3)\n",
-    "send = browser.find_element_by_class_name('s1i5eluu')\n",
-    "send.click()"
+    "browser.find_element_by_class_name('s1i5eluu').click()"
    ]
   },
   {
@@ -171,14 +171,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter the bio: xxxx\n"
+      "Enter the bio: zzzz\n"
      ]
     }
    ],
@@ -187,8 +187,7 @@
     "sleep(3)\n",
     "browser.maximize_window()\n",
     "sleep(3)\n",
-    "browser.maximize_window()\n",
-    "profile = browser.find_element_by_link_text(\"Tejas\")\n",
+    "profile = browser.find_element_by_xpath(\"//a[@class='oajrlxb2 g5ia77u1 qu0x051f esr5mh6w e9989ue4 r7d6kgcz rq0escxv nhd2j8a9 j83agx80 p7hjln8o kvgmc6g5 cxmmr5t8 oygrvhab hcukyx3x jb3vyjys d1544ag0 qt6c0cv9 tw6a2znq i1ao9s8h esuyzwwr f1sip0of lzcic4wl l9j0dhe7 abiwlrkh p8dawk7l bp9cbjyn e72ty7fz qlfml3jp inkptoze qmr60zad btwxx1t3 tv7at329 taijpn5t']\")\n",
     "profile.click()\n",
     "sleep(3)\n",
     "\n",
@@ -198,7 +197,7 @@
     "\n",
     "#Typing the text in the textbox\n",
     "sleep(3)\n",
-    "textbox = browser.find_element_by_css_selector(\"#mount_0_0 > div > div > div.rq0escxv.l9j0dhe7.du4w35lb > div.rq0escxv.l9j0dhe7.du4w35lb > div > div > div.j83agx80.cbu4d94t.d6urw2fd.dp1hu0rb.l9j0dhe7.du4w35lb > div.dp1hu0rb.cbu4d94t.j83agx80 > div > div > div:nth-child(1) > div.rq0escxv.l9j0dhe7.du4w35lb.j83agx80.taijpn5t.gs1a9yip.owycx6da.btwxx1t3.ihqw7lf3.cddn0xzi > div > div > div.rq0escxv.l9j0dhe7.du4w35lb.j83agx80.taijpn5t.gs1a9yip.owycx6da.btwxx1t3.d1544ag0.tw6a2znq.discj3wi.b5q2rw42.lq239pai.mysgfdmx.hddg9phg > div > div > div.j83agx80.cbu4d94t.obtkqiv7.sv5sfqaa > div > span > div > div > label > textarea\")\n",
+    "textbox = browser.find_element_by_xpath(\"//textarea[@placeholder='Describe who you are']\")\n",
     "text = input(\"Enter the bio: \")\n",
     "textbox.clear\n",
     "if len(text)<=101:\n",
@@ -208,7 +207,7 @@
     "\n",
     "#Saving the bio    \n",
     "sleep(2)\n",
-    "send = browser.find_element_by_css_selector(\"#mount_0_0 > div > div > div.rq0escxv.l9j0dhe7.du4w35lb > div.rq0escxv.l9j0dhe7.du4w35lb > div > div > div.j83agx80.cbu4d94t.d6urw2fd.dp1hu0rb.l9j0dhe7.du4w35lb > div.dp1hu0rb.cbu4d94t.j83agx80 > div > div > div:nth-child(1) > div.rq0escxv.l9j0dhe7.du4w35lb.j83agx80.taijpn5t.gs1a9yip.owycx6da.btwxx1t3.ihqw7lf3.cddn0xzi > div > div > div.rq0escxv.l9j0dhe7.du4w35lb.j83agx80.taijpn5t.gs1a9yip.owycx6da.btwxx1t3.d1544ag0.tw6a2znq.discj3wi.b5q2rw42.lq239pai.mysgfdmx.hddg9phg > div > div > div.j83agx80.cbu4d94t.obtkqiv7.sv5sfqaa > div > span > div > div > div.aahdfvyu.i1fnvgqd.j83agx80.bp9cbjyn > div:nth-child(2) > div.oajrlxb2.s1i5eluu.gcieejh5.bn081pho.humdl8nn.izx4hr6d.rq0escxv.nhd2j8a9.j83agx80.p7hjln8o.kvgmc6g5.cxmmr5t8.oygrvhab.hcukyx3x.jb3vyjys.d1544ag0.qt6c0cv9.tw6a2znq.i1ao9s8h.esuyzwwr.f1sip0of.lzcic4wl.l9j0dhe7.abiwlrkh.p8dawk7l.beltcj47.p86d2i9g.aot14ch1.kzx2olss.cbu4d94t.taijpn5t.ni8dbmo4.stjgntxs.k4urcfbm.tv7at329\")\n",
+    "send = browser.find_element_by_xpath(\"//div[@aria-label='Save']\")\n",
     "send.click()\n"
    ]
   },
@@ -216,12 +215,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Sending a message to Messenger"
+    "### Sending a message via Messenger"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -235,31 +234,34 @@
    "source": [
     "#Clicking on the Messenger icon\n",
     "sleep(3)\n",
-    "msg_icon = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[2]/div[4]/div[1]/div[2]/span/div/div[1]\")\n",
+    "msg_icon = browser.find_element_by_xpath(\"//div[@aria-label='Messenger']\")\n",
     "msg_icon.click()\n",
     "\n",
     "#Searching for the person\n",
     "sleep(3)\n",
-    "search = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[2]/div[4]/div[2]/div/div/div[1]/div[1]/div/div/div/div/div/div/div[1]/div/div[1]/div[1]/div[2]/div[1]/div/div/div/label/input\")\n",
+    "search = browser.find_element_by_xpath(\"//input[@placeholder='Search Messenger']\")\n",
     "search.click()\n",
     "\n",
     "#Enter the person name\n",
     "name = input(\"Enter the name: \")\n",
-    "search_bar = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[2]/div[4]/div[2]/div/div/div[1]/div[1]/div/div/div/div/div/div/div[1]/div/div[1]/div[1]/div[2]/div[1]/div/div/div[2]/label/input\")\n",
+    "search_bar = browser.find_element_by_xpath(\"//input[@placeholder='Search Messenger']\")\n",
     "search_bar.send_keys(name)\n",
     "\n",
     "#Opening the chatbox\n",
     "sleep(3)\n",
-    "tab = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[2]/div[4]/div[2]/div/div/div[1]/div[2]/div/div/div[1]/div[1]/div/div/div[1]/ul/div[1]/li/div/div[1]/div/div[2]/span\")\n",
+    "tab = browser.find_element_by_xpath(\"//div[@class='j83agx80 oo9gr5id buofh1pr ni8dbmo4 stjgntxs cxgpxx05 dflh9lhu sj5x9vvc scb9dxdr']\")\n",
     "tab.click()\n",
     "sleep(2)\n",
     "\n",
     "#Sending the message\n",
-    "message = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[5]/div[1]/div[1]/div[1]/div/div/div/div/div/div/div[2]/div/div[2]/form/div/div[3]/div[2]/div[1]/div/div/div/div/div[2]/div/div/div/div\")\n",
+    "message = browser.find_element_by_xpath(\"//div[@class='notranslate _5rpu']\")\n",
     "message.send_keys(\"This message was sent using Selenium\")\n",
     "sleep(3)\n",
-    "send = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[5]/div[1]/div[1]/div[1]/div/div/div/div/div/div/div[2]/div/div[2]/form/div/div[3]/span[2]/div\")\n",
-    "send.click()"
+    "browser.find_element_by_xpath(\"//div[@aria-label='Press Enter to send']\").click()\n",
+    "\n",
+    "#Closing the Chatbox\n",
+    "sleep(3)\n",
+    "browser.find_element_by_xpath(\"//div[@aria-label='Close tab']\").click()"
    ]
   },
   {
@@ -271,16 +273,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "sleep(3)\n",
-    "drop = browser.find_element_by_css_selector(\"#mount_0_0 > div > div > div.rq0escxv.l9j0dhe7.du4w35lb > div:nth-child(2) > div.n7fi1qx3.hv4rvrfc.b3onmgus.poy2od1o.kr520xx4.ehxjyohh > div.bp9cbjyn.j83agx80.rl25f0pe.byvelhso.l9j0dhe7.du4w35lb > span > div > div.oajrlxb2.tdjehn4e.qu0x051f.esr5mh6w.e9989ue4.r7d6kgcz.rq0escxv.nhd2j8a9.j83agx80.p7hjln8o.kvgmc6g5.cxmmr5t8.oygrvhab.hcukyx3x.jb3vyjys.rz4wbd8a.qt6c0cv9.a8nywdso.i1ao9s8h.esuyzwwr.f1sip0of.lzcic4wl.l9j0dhe7.abiwlrkh.p8dawk7l.bp9cbjyn.s45kfl79.emlxlaya.bkmhp75w.spb7xbtv.rt8b4zig.n8ej3o3l.agehan2d.sk4xxmp2.taijpn5t.qypqp5cg.q676j6op\")\n",
-    "drop.click()\n",
+    "browser.find_element_by_xpath(\"//div[@aria-label='Account']\").click()\n",
     "sleep(2)\n",
-    "log_out = browser.find_element_by_xpath(\"/html/body/div[1]/div/div/div[1]/div[2]/div[4]/div[2]/div/div/div[1]/div[1]/div/div/div/div/div/div/div/div[1]/div/div[3]/div/div[5]/div\")\n",
-    "log_out.click()"
+    "log_out = browser.find_element_by_xpath(\"//div[@class='knvmm38d']//div[5]//div[1]//div[1]//div[2]\")\n",
+    "log_out.click()\n",
+    "\n",
+    "#Closing the browser\n",
+    "sleep(3)\n",
+    "browser.quit()"
    ]
   }
  ],
